--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,21 +17,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
 
-        .map-container {
-            overflow: hidden;
-            padding-bottom: 56.25%;
-            position: relative;
-            height: 0;
-        }
-
-            .map-container iframe {
-                left: 0;
-                top: 0;
-                height: 100%;
-                width: 100%;
-                position: absolute;
-            }
-
         footer {
             position: fixed;
             bottom: 0;
@@ -45,9 +30,24 @@
             width: 220px;
             height: auto;
         }
+        .sidebar-fixed {
+    /* Sidebar'ın sabit bir şekilde kalması gerektiğini belirtiyoruz */
+    position: fixed;
+    height: 100%; /* Yükseklik ekran yüksekliği kadar olacak */
+    overflow-y: auto; /* Eğer sidebar ekran yüksekliğinden uzunsa kaydırma çubuğu ekler */
+}
+
+/* Medya sorgusu ile 1200px'den daha küçük ekranlar için stil ayarları */
+
+}
+
+/* 1200px'den büyük ekranlar için stil ayarları (Varsayılan) */
+
+}
     </style>
 </head>
 <body class="grey lighten-3">
+    <div class="col-2">
     <header>
         <!-- Sidebar -->
         <div class="sidebar-fixed position-fixed">
@@ -55,30 +55,36 @@
                 <img src="~/template/images/the_merlot_logo.png" class="" alt="" />
             </a>
             <div class="list-group list-group-flush">
-                <a href="#" class="list-group-item list-group-item-action waves-effect">
-                    <i class="fa-solid fa-house" style="color: maroon;"></i>  Ana Sayfa
+                    <a href="/Home/Index" class="list-group-item list-group-item-action waves-effect">
+                    <i class="fa-solid fa-house" style="color: maroon; width:20px; margin-right:10px;"></i>Anket Sonuçları
                 </a>
-                <a href="#" class="list-group-item list-group-item-action waves-effect">
-                    <i class="fa-solid fa-square-poll-horizontal" style="color: maroon;"></i>  Anket
+                <a href="/Survey/Index" class="list-group-item list-group-item-action waves-effect">
+                        <i class="fa-solid fa-question" style="color: maroon; width:20px; margin-right:10px;"></i>Sorular
                 </a>
+                    <a href="Survey/Index" class="list-group-item list-group-item-action waves-effect">
+                        <i class="fa-solid fa-reply" style="color: maroon; width:20px; margin-right:10px;"></i>Cevaplar
+                    </a>
                 <a href="#" class="list-group-item list-group-item-action waves-effect">
-                    <i class="fa-solid fa-circle-info" style="color: maroon;"></i>  Otel Bilgileri
+                        <i class="fa-solid fa-circle-info" style="color: maroon; width:20px; margin-right:10px;"></i>  Otel Bilgileri
                 </a>
             </div>
         </div>
         <!-- Sidebar -->
     </header>
+    </div>
+    <div class="col-xlg-10 col-lg-12 col-md-12 col-sm-12">
     <!--Main Navigation-->
     <!--Main layout-->
     <main class="pt-5 mx-lg-5">
         <div class="container-fluid mt-5">
             <!--Grid row-->
-            <div class="row wow fadeIn">
+
                 @RenderBody()
-            </div>
+
             <!--Grid row-->
         </div>
     </main>
+    </div>
     <!--Main layout-->
     <!--Footer-->
     <footer class="page-footer text-center" style="background-color: rgba(0,0,0,0.8);">
