--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,16 +17,13 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
     <style>
 
-        footer {
+        .page-footer {
             position: fixed;
-            bottom: 0;
             width: 100%;
-            height: 75px;
             background-color: rgba(0,0,0,0.8);
-            z-index: 1000;
+
         }
 
         img {
@@ -39,22 +36,16 @@
     height: 100%; /* Yükseklik ekran yüksekliği kadar olacak */
     overflow-y: auto; /* Eğer sidebar ekran yüksekliğinden uzunsa kaydırma çubuğu ekler */
 }
-
-/* Medya sorgusu ile 1200px'den daha küçük ekranlar için stil ayarları */
-
-
-
-/* 1200px'den büyük ekranlar için stil ayarları (Varsayılan) */
-
-
     </style>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body class="grey lighten-3">
     <div class="col-2">
     <header>
         <!-- Sidebar -->
         <div class="sidebar-fixed position-fixed">
-            <a class="">
+            <a href="/Login/Index" class="">
                 <img src="~/template/images/the_merlot_logo.png" class="" alt="" />
             </a>
             <div class="list-group list-group-flush">
@@ -67,7 +58,7 @@
                     <a href="/Answer/Answers" class="list-group-item list-group-item-action waves-effect">
                         <i class="fa-solid fa-reply" style="color: maroon; width:20px; margin-right:10px;"></i>Cevaplar
                     </a>
-                <a href="#" class="list-group-item list-group-item-action waves-effect">
+                <a href="/SurveyExample/Survey" class="list-group-item list-group-item-action waves-effect">
                         <i class="fa-solid fa-circle-info" style="color: maroon; width:20px; margin-right:10px;"></i>  Örnek Anket
                 </a>
             </div>
@@ -76,8 +67,6 @@
     </header>
     </div>
     <div class="col-xlg-10 col-lg-12 col-md-12 col-sm-12">
-    <!--Main Navigation-->
-    <!--Main layout-->
     <main class="pt-5 mx-lg-5">
         <div class="container-fluid mt-5">
             <!--Grid row-->
@@ -94,19 +83,19 @@
         <div class="pt-3">
             <!-- Social icons -->
             <div class="pb-2">
-                <a href="#" target="_blank">
+                <a href="" target="_blank">
                     <i class="fab fa-facebook-f mr-3"></i>
                 </a>
-                <a href="#" target="_blank">
+                <a href="" target="_blank">
                     <i class="fab fa-twitter mr-3"></i>
                 </a>
-                <a href="#" target="_blank">
+                <a href="" target="_blank">
                     <i class="fab fa-youtube mr-3"></i>
                 </a>
-                <a href="#" target="_blank">
+                <a href="" target="_blank">
                     <i class="fab fa-google-plus mr-3"></i>
                 </a>
-                <a href="#p" target="_blank">
+                <a href="" target="_blank">
                     <i class="fab fa-pinterest mr-3"></i>
                 </a>
             </div>
@@ -120,6 +109,8 @@
         <!--/.Copyright-->
     </footer>
     <!--/.Footer-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    @RenderSection("scripts", required: false)
 </body>
 </html>
 <!-- SCRIPTS -->
