--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using SurveyMVC
 @using SurveyMVC.Dtos.QuestionDtos
 @using SurveyMVC.Dtos.AnswerDtos
+@using SurveyMVC.Dtos.SurveyDtos
 @using SurveyMVC.Dtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
