--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using SurveyMVC.Dtos.QuestionDtos
 @using SurveyMVC.Dtos.AnswerDtos
 @using SurveyMVC.Dtos.SurveyDtos
+@using SurveyMVC.Dtos.HomeDtos
 @using SurveyMVC.Dtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
