--- a/Views/Error/Error403.cshtml
+++ b/Views/Error/Error403.cshtml
@@ -1,7 +1,12 @@
+﻿
+@{
+    Layout = null;
+}
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" charset=UTF-8">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Meta, title, CSS, favicons, etc. -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,37 +22,25 @@
 
     <!-- Custom Theme Style -->
     <link href="/table/Gentela/build/css/custom.min.css" rel="stylesheet">
-  </head>
+</head>
 
-  <body class="nav-md">
+<body class="nav-md">
     <div class="container body">
-      <div class="main_container">
-        <!-- page content -->
-        <div class="col-md-12">
-          <div class="col-middle">
-            <div class="text-center text-center">
-              <h1 class="error-number">403</h1>
-              <h2>Access denied</h2>
-              <p>Full authentication is required to access this resource. <a href="#">Report this?</a>
-              </p>
-              <div class="mid_center">
-                <h3>Search</h3>
-                <form>
-                  <div class="col-xs-12 form-group pull-right top_search">
-                    <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Search for...">
-                      <span class="input-group-btn">
-                              <button class="btn btn-default" type="button">Go!</button>
-                          </span>
+        <div class="main_container">
+            <!-- page content -->
+            <div class="col-md-12">
+                <div class="col-middle">
+                    <div class="text-center text-center">
+                        <h1 class="error-number">403</h1>
+                        <h2>Erişim engellendi</h2>
+                        <p>
+                            Bu kaynağa erişmek için tam kimlik doğrulaması gereklidir. <a asp-controller="Login" asp-action="Index">Geri Dön</a>
+                        </p>
                     </div>
-                  </div>
-                </form>
-              </div>
+                </div>
             </div>
-          </div>
+            <!-- /page content -->
         </div>
-        <!-- /page content -->
-      </div>
     </div>
 
     <!-- jQuery -->
@@ -61,5 +54,5 @@
 
     <!-- Custom Theme Scripts -->
     <script src="/table/Gentela/build/js/custom.min.js"></script>
-  </body>
+</body>
 </html>
