--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -44,15 +44,11 @@
                                         <span asp-validation-for="Mail" class="text-danger"></span>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Password" asp-for="Password">
+                                        <input type="password" class="form-control" placeholder="Password" asp-for="Password">
                                         <span asp-validation-for="Password" class="text-danger"></span>
                                     </div>
                                     <button class="btn login-form__btn submit w-100" style="font-size:16px; background-color:maroon;">Giriş Yap</button>
                                 </form>
-                                <p class="mt-5 login-form__footer">
-                                    Bir hesabınız yok mu?
-                                    <a href="/Register/Index/" class="text-primary">Kayıt ol</a>
-                                </p>
                             </div>
                         </div>
                     </div>
