--- a/Views/Question/Questions.cshtml
+++ b/Views/Question/Questions.cshtml
@@ -16,8 +16,9 @@
     .table {
         margin: none;
     }
-</style>
+   
 
+</style>
 <div class="row">
     <div class="card col-sm-12">
 
@@ -69,7 +70,7 @@
             </table>
         </div>
         <div class="card-footer">
-            <a href="/Question/AddQuestion" class="btn btn-primary w-100">Yeni Soru Ekle</a>
+            <a href="/Question/AddQuestion" class="btn  w-100" style="background-color:rgb(135,21,43); color:white;">Yeni Soru Ekle</a>
         </div>
     </div>
 </div>
