--- a/Views/SurveyExample/Survey.cshtml
+++ b/Views/SurveyExample/Survey.cshtml
@@ -4,10 +4,42 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model SurveyDto
+<style>
+    .custom-alert {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 9999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .alert-content {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 5px;
+        text-align: center;
+    }
+
+    #okButton {
+        padding: 10px 20px;
+        background-color: maroon;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+</style>
 <div class="row">
     <div class="col-10">
         <form asp-action="Survey" asp-controller="SurveyExample" method="post">
-            <div class="card" style="margin-bottom:150px; width:1000px; position:absolute">
+            <div class="card" id="formcard" style="width:1200px; position:absolute">
                 <div class="card-header">
                     <label class="form-label" name="RoomNumber" asp-for="@Model.RoomNumber">Oda Numarası</label>
                     <input class="form-control" asp-for="@Model.RoomNumber" placeholder="Oda numaranızı giriniz..." />
@@ -15,7 +47,7 @@
                     <label class="form-label" name="Mail" asp-for="@Model.Mail">Mail Adresi</label>
                     <input class="form-control" asp-for="@Model.Mail" placeholder="Mail adresinizi giriniz..." />
                 </div>
-                <div id="surveyPartPartialView"></div>
+                <div id="surveyPartPartialView" style="max-height: 500px; overflow-y: auto;"></div>
                 <div class="card-footer">
                     <button class="btn bt-outline-primary" style="background-color:cornflowerblue;color:white" id="submit-button">Anketi Gönder</button>
                 </div>
@@ -26,7 +58,57 @@
     </div>
 </div>
 
+<span class="alertCustom"></span>
+
 <script>
+    function showAlert(alertContent, textContent) {
+        const customAlert = $("#customAlert");
+
+        if (customAlert.is(':visible')) {
+            return;
+        }
+
+        customAlert.show();
+        if (customAlert.length === 0) {
+            const div1 = document.createElement("div");
+            const div2 = document.createElement("div");
+            const h2 = document.createElement("h2");
+            const p = document.createElement("p");
+            const button = document.createElement("button");
+
+            div1.id = "customAlert";
+            div1.className = "custom-alert";
+            div2.className = "alert-content";
+            h2.innerText = textContent;
+            p.textContent = alertContent;
+            button.id = "okButton";
+            button.textContent = "Tamam";
+            div1.appendChild(div2);
+            div2.appendChild(h2);
+            div2.appendChild(p);
+            div2.appendChild(button);
+            $(".alertCustom").append(div1);
+            $('#okButton').prop("disabled", false);
+        }
+    }
+
+    function closeAlerts() {
+        $('#customAlert').hide();
+    }
+    $(document).ready(function () {
+        $(".alert-light").hide();
+        $(document).keypress(function (event) {
+            if (event.which === 13) {
+                event.preventDefault(); // Sayfa yenilenmesini engellemek için
+                // Etkinleştirmek istediğiniz düğmenin ID'sini burada kullanın
+                var buttonToActivate = $("#loadSurveyPart");
+                if (buttonToActivate.length > 0) {
+                    buttonToActivate.click();
+                }
+            }
+        });
+    });
+
     $(document).ready(function () {
         $('#loadSurveyPart').click(function () {
             $.ajax({
@@ -41,9 +123,9 @@
             });
         });
     });
-   
+
     var responseValues = [];
-    
+
     $(document).on("click", ".star-label", function () {
         var star = $(this).data("star");
         var questionId = $(this).data("question");
@@ -55,7 +137,6 @@
 
             if (thisStar.data("star") <= star) {
                 if (thisStarRating === star) {
-                    // Yıldız zaten dolu, içeriği değiştirme
                     return;
                 }
                 thisStar.find("i").removeClass("fa-regular").addClass("fa-solid filled-star");
@@ -67,26 +148,27 @@
         });
 
         responseValues[questionId] = star;
-        
     });
+
     $(".card-body, .card-footer, #loadSurveyPart2").hide();
 
     $("#loadSurveyPart").on("click", function () {
         $(".card-body, .card-footer, #submit-button").show();
         $(this).hide();
     });
+
     var date = null;
+
     $('#submit-button').click(function (e) {
         e.preventDefault();
         var itemValues = [];
         $('[id^="Question-"]').each(function (index, element) {
             var value = element.value;
             itemValues.push(value);
-            
         });
         var date = new Date();
         date.setHours(date.getHours() + 3);
-     
+
         var surveyDto = {
             RoomNumber: $('#RoomNumber').val(),
             Mail: $('#Mail').val(),
@@ -94,27 +176,40 @@
             Response: responseValues,
             ResponseDate: date,
         };
-       
-        var jsonData = JSON.stringify(surveyDto);
-        console.log(jsonData);
 
-        $.ajax({
-            url: '@Url.Action("Survey", "SurveyExample")',
-            type: 'POST',
-            contentType: 'application/json',
-            data: jsonData,
-            success: function (result) {
-                alert("Tebrikler! Anketi tamamladınız.");
-                $(".card-body, .card-footer, #submit-button, #loadSurveyPart").hide();
-                $("#loadSurveyPart2").show();
-            },
-            error: function (xhr, textStatus, errorThrown) {
-                console.log("Hata oluştu: " + textStatus);
-                console.log("Detay: " + errorThrown);
-                alert('Bir hata oluştu.');
-            }
-        });
+        var jsonData = JSON.stringify(surveyDto);
+
+        var totalQuestions = $('[id^="Question-"]').length;
+        var answeredQuestions = responseValues.filter(function (value) {
+            return value > 0;
+        }).length;
+
+        function closeAlerts() {
+            $('#customAlert').hide();
+        }
+        
+        if (answeredQuestions < totalQuestions) {
+            showAlert("Lütfen tüm soruları yanıtlayınız...", "Uyarı...");
+            $('#okButton').click(function () {
+                closeAlerts();
+            });
+        } else {
+            // JavaScript kodunuz
+            $.ajax({
+                url: '@Url.Action("Survey", "SurveyExample")',
+                type: 'POST',
+                contentType: 'application/json',
+                data: jsonData,
+                success: function (result) {
+                    // Bootstrap alert gösterimi
+                    $(".alert-light").show();
+
+                    // İlgili diğer görsel değişiklikleri yapabilirsiniz
+                    $(".card-body, .card-footer, #submit-button, #loadSurveyPart").hide();
+                    $("#loadSurveyPart2").show();
+                }
+            });
+
+        }
     });
 </script>
-
-
