--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using SurveyMVC.Dtos.AnswerDtos
 @using SurveyMVC.Dtos.SurveyDtos
 @using SurveyMVC.Dtos.HomeDtos
+@using SurveyMVC.Dtos.Users
 @using SurveyMVC.Dtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
